almoust ready for JS

--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
@@ -21,6 +21,7 @@
     width: 100%;
     padding: 60px;
     background-color: $color-white;
+    z-index: 10;
 
     &::before {
         content: "";
