--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/footer/_footer.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/footer/_footer.scss
@@ -1,24 +1,36 @@
 .footer {
-    padding: 200px 0;
-    background-color: $color-light-blue;
+    padding: 185px 0;
+    position: relative;
 
+    background: linear-gradient(251deg, #7E5AFF -2.19%, #55B7FF 103.21%);
+
+
+    &::before {
+        content: "";
+        background: url('../../images/shadow1.png') no-repeat top;
+        background-size: contain;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .footer-container {
-    max-width: 870px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
 
 .logo {
-
-
-
     &__img {}
 }
 
 .social-media {
-
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 
     &__social-media-item {}
 }
@@ -27,14 +39,32 @@
     display: block;
     height: 40px;
     width: 40px;
-    border: 1px solid red;
+    border: 1px solid $color-white;
+    border-radius: 50%;
+    margin-left: 20px;
 
-    &__link {}
-
+    &__link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+    }
 
     &__image {
+        align-self: center;
         height: 18px;
+        // width: 18px;
+        text-align: center;
+        fill: $color-white;
+
+        & use {}
     }
 }
 
-.copyrights {}
+.copyrights {
+    color: $color-white;
+    font-size: 14px;
+    margin: 0;
+    padding-top: 10px;
+}
