--- a/students/havrylova_kateryna/exam_1/src/css/_variables.scss
+++ b/students/havrylova_kateryna/exam_1/src/css/_variables.scss
@@ -1,92 +1,54 @@
-//Polygraphy
+$default-width: 1200px;
 
-// $default-fonts-name: "Josefin";
-// $follbak: Arial,
-//     Helvetica,
-//     sans-serif;
-// $default-fonts: $default-fonts-name,
-//     $follbak;
-// $default-font-size: 16px;
-$default-line-height: 1.625;
+$gap: 15px;
 
-// $secondary-fonts-name: "Aleo";
+//colors
+$color-orange: #FF9900;
+$color-white: #FFFFFF;
+$color-black: #000000;
+$color-gray: #999999;
+$color-darkgray: #333333;
+$color-lightgary: #F4F4F4;
+$color-darkblue: #5373FD;
+$color-red: #FF6363;
+$color-blue: #00A2FF;
+$color-gray-opacity: rgba(35, 35, 35, 0.9);
 
-//     $follbak;
 
-$font-weight: 300;
-$font-weight-name: 400;
-$font-weight-title: 700;
+//fonts
+$font-size-14: 14px;
+$font-size-16: 16px;
+$font-size-20: 20px;
+$font-size-22: 22px;
+$font-size-24: 24px;
+$font-size-36: 36px;
+$font-size-48: 48px;
+
+$font-weight-300: 300;
+$font-weight-400: 400;
+$font-weight-700: 700;
+
+$line-height-20: 20px;
+$line-height-28: 28px;
+$line-height-40: 40px;
+$line-height-52: 52px;
+$default-body-color: $color-white;
+$default-body-bg-color: $color-darkgray;
 
 $fallback: Arial, Helvetica, sans-serif;
 $default-font-name: Josefin Sans;
 $main-font: $default-font-name, $fallback;
 $default-font-size: 16px;
-$default-font-weight: $font-weight;
+$default-font-weight: $font-weight-300;
 
-$secondary-fonts-name: Aleo;
-$secondary-fonts: $secondary-fonts-name;
-$default-font-sub-font: $secondary-fonts-name, $fallback;
+$font-second-font: Aleo;
+$default-font-second-font: $font-second-font, $fallback;
 $font-path: './fonts/';
-$base-img-path: '../';
 
-$font-size-small: 14px;
-$font-size-h5: 20px;
-$font-size-logo-sub: 22px;
-$font-size-h3: 24px;
-$font-size-h2: 36px;
-$font-size-h1: 48px;
-
-
-//Color
-
-$red: #d62c40;
-$grey: #b9bcd1;
-$lightRed: #eb304d;
-
-$dodgerBlue: #3686fe;
-$dodgerBlue02: #5474fd;
-$dodgerBlue03: #496bfe;
-$chathamsBlue: #194177;
-$scorpion: #5a5a5a;
-$white: #fff;
-$whisper: #f9f8fb;
-$black: #000000;
-$mineShaft: #262626;
-$mineShaft02: #333333;
-$mineShaft03Opacity: rgba(35, 35, 35, .9);
-$mineShaft03: #232323;
-$outrageousOrange: #ff6033;
-$bondiBlue: #00afaf;
-$malibu: #70bfff;
-$silverChalice: #9d9d9d;
-$brightSun: #ffe92f;
-$horizon: #5585a2;
-$mercury: #e8e8e8;
-$bondiBlue: #0683b4;
-$capeCod: #373e40;
-$bittersweet: #ff6363;
-$azureRadiance: #00a2ff;
-$spunPearl: #aaa6bd;
-$waxFlower: #ffc3a9;
-$outerSpace: #2b2d2d;
-$eastBay: #37437a;
-
-$textColorPage: $mercury;
-$textColorWhite: $white;
-$colorBorderPage: $white;
-$bgColorHeader: $bondiBlue;
-$bgColorBtnHeader: $dodgerBlue02;
-$bgColorWhyChoose: $capeCod;
-$colorBeforeBtn: $dodgerBlue03;
-$bgColorSearch: $mineShaft02;
-$bgAround01: $dodgerBlue02;
-$bgAround02: $bittersweet;
-$bgAround03: $azureRadiance;
-$bgColorWhatWe: $spunPearl;
-$bgSpainWrapp: $mineShaft03Opacity;
-$bgSpain02Wrapp: $waxFlower;
-$bgColorTourist: $outerSpace;
-$bgFooter: $mineShaft03;
-$fiilSvgFooter: $eastBay;
-
-$defaultBoxShadow: 0 0 2px 1px rgba(0, 0, 0, .35);
+$breack-points: (
+    "lg": 1200px,
+    "md": 1024px,
+    "sm": 768px,
+    "xs": 576px,
+    "xxs": 480px
+);
