--- a/students/havrylova_kateryna/exam_1/src/css/style.scss
+++ b/students/havrylova_kateryna/exam_1/src/css/style.scss
@@ -1,13 +1,9 @@
 @use 'sass:math';
-@import 'variables';
-@import 'mixins';
-@import 'grid';
-@import 'fonts';
-@import 'reset';
-@import 'typografy';
-@import 'header';
-@import 'whychose';
-@import 'search';
-@import 'whatwe';
-@import 'tourist';
-@import 'footer';
+@import './variables';
+@import './mixins';
+@import './reset';
+@import './global';
+@import './form';
+@import './header';
+@import './footer';
+@import './menu';
