--- a/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
@@ -8,8 +8,8 @@
 @import "./reset";
 @import "./global";
 @import "./btn";
-@import "./header/header";
-@import "./header/nav";
+@import "./hero";
+@import "./menu";
 @import "./projects";
 @import "./news";
 @import "./gallery";
