--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_hero-block.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_hero-block.scss
@@ -1,14 +1,127 @@
-.container,
-.row,
-.col,
-.search-wrapper {
-    height: 100%;
+.hero {
+    height: 100vh;
+    color: $color-white;
 }
 
-.hero-block {
-    background-image: url(../images/header-background.jpg);
-    background-size: cover;
-    // height: calc(100vh - $nav-height-desktop);
-    background-position: center center;
+.slick-vertical .slick-slide {
+    border: none;
+}
 
+.slick-active {
+    background-color: $color-white;
+}
+
+.hero-slider {
+    height: 100%;
+
+    .slick-dots {
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        flex-direction: column;
+        position: absolute;
+        right: 50px;
+        top: 50%;
+        bottom: 50%;
+
+        li {
+            height: 10px;
+            width: 10px;
+            list-style: none;
+            margin: 20px 0;
+            border-radius: 50%;
+
+            button {
+                font-size: 0;
+                height: 10px;
+                width: 10px;
+                border-radius: 50%;
+                border: 1px solid $color-white;
+                border-color: $color-white;
+                background-color: transparent;
+                padding: 0;
+
+                &:before {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    content: none;
+                    width: 20px;
+                    height: 20px;
+                    font-family: "slick";
+                    font-size: 6px;
+                    line-height: 20px;
+                    text-align: center;
+                    color: transparent;
+                    opacity: 0;
+                    -webkit-font-smoothing: antialiased;
+                }
+            }
+        }
+    }
+
+    &__item {
+        position: relative;
+        height: 100vh;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+
+        &:nth-child(n+2) {
+            display: none;
+        }
+
+        .slick-initialized & {
+            &:nth-child(n+2) {
+                display: block;
+            }
+        }
+
+        &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
+            z-index: 2;
+        }
+    }
+
+    &__img {
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        object-fit: cover;
+        object-position: center;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    &__container {
+        position: relative;
+        z-index: 10;
+    }
+
+    &__title {
+        font-size: 80px;
+        font-weight: 700;
+        letter-spacing: 8px;
+        text-align: center;
+        margin: 0;
+    }
+
+    &__text {
+        font-size: 18px;
+        font-weight: 400;
+        letter-spacing: 5.4px;
+        text-align: center;
+        margin: 0;
+        padding-top: 20px;
+    }
 }
