--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
@@ -4,10 +4,11 @@
 
 .map {
     width: 100%;
+    height: 700px;
 
     &>iframe {
         width: 100%;
-        height: 700px;
+        height: 100%;
     }
 }
 
@@ -17,7 +18,6 @@
     left: 50%;
     transform: translate(-50%);
     max-width: 770px;
-    max-height: 450px;
     width: 100%;
     padding: 60px;
     background-color: $color-white;
@@ -97,7 +97,7 @@
         line-height: 27px;
         border: none;
         border-bottom: 1px solid $color-steel-blue;
-        padding: 10px;
+        padding: 10px 0;
         margin-bottom: 30px;
         background: transparent;
     }
