--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/style.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/style.scss
@@ -1,4 +1,8 @@
 @use 'sass:math';
+@import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss';
+@import '../../node_modules/slick-carousel/slick/slick.scss';
+@import '../../node_modules/slick-carousel/slick/slick-theme.scss';
+
 @import "./variables";
 @import "./extend";
 @import "./mixins";
