--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
@@ -1,1 +1,102 @@
+.header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 100;
+}
 
+.logo {}
+
+.nav {}
+
+.menu-wrapper {}
+
+.menu {
+    display: flex;
+    list-style-type: none;
+    margin-bottom: 0;
+
+    @include media(sm) {
+        display: none;
+        background-color: white;
+        position: fixed;
+        top: 50px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        flex-direction: column;
+        transform: translateX(-100%);
+        transition: transform .3s ease-in-out;
+
+        ._open & {
+            transform: translateX(0);
+        }
+    }
+
+    &__item {}
+}
+
+.menu-open-btn {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    border: $default-border;
+
+    ._open & {
+        .menu-open-btn__line {
+            background-color: transparent;
+
+            &::before {
+                top: 0;
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                bottom: 0;
+                transform: rotate(-45deg);
+            }
+        }
+    }
+
+
+    &__line {
+        position: relative;
+        display: block;
+        width: 70%;
+        background-color: green;
+        height: 4px;
+        border-radius: 4px;
+        transition: background-color .3s ease-in-out;
+
+        &::before,
+        &::after {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-color: green;
+            border-radius: inherit;
+            position: absolute;
+            transition: all .3s ease-in-out;
+        }
+
+        &::before {
+            top: -11px;
+        }
+
+        &::after {
+            bottom: -11px;
+        }
+    }
+}
+
+.only-mobile {
+    @include media-m(sm) {
+        display: none;
+    }
+}
