--- a/students/savchak_marharyta/exam_1/src/css/_global.scss
+++ b/students/savchak_marharyta/exam_1/src/css/_global.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-    padding: $container-padding;
+    padding-bottom: $container-bottom-padding;
     max-width: $container-max-width;
     margin: 0 auto;
 }
