--- a/students/dunaieva_alona/exam_first_module/src/css/sections/_feedback.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/sections/_feedback.scss
@@ -1,5 +1,6 @@
 .feedback {
     background: url(../images/feedback-bg.jpg) center;
+    background-size: cover;
 
     &__title {
         text-align: center;
