--- a/students/dunaieva_alona/exam_first_module/src/css/sections/_first-service.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/sections/_first-service.scss
@@ -1,5 +1,6 @@
 .first-service {
     background: url(../images/first-service-bg.jpg) center;
+    background-size: cover;
 
     &__sub-title {
         font-size: 20px;
