--- a/students/dunaieva_alona/exam_first_module/src/css/sections/_second-service.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/sections/_second-service.scss
@@ -1,5 +1,6 @@
 .second-service {
     background: url(../images/second-service-bg.jpg) center;
+    background-size: cover;
 
     &__sub-title {
         @extend .first-service__sub-title;
