--- a/students/dunaieva_alona/exam_first_module/src/css/_variables.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/_variables.scss
@@ -8,7 +8,8 @@ $icon-red: #FF6363;
 $icon-blue: #00A2FF;
 $submit-btn: $icon-blue;
 $color-mobile-menu: rgba(83, 115, 253, 0.9);
-$btn-color: $dodger-blue;
+$btn-color: linear-gradient(50deg, #486BFE 0%, #486BFE 40%, #5373FD 0%, #5373FD 100%);
+$btn-color-small: $dodger-blue;
 
 // fonts
 $fallback: Arial, Helvetica, sans-serif;
@@ -25,7 +26,7 @@ $default-coutn-col: 12;
 $default-width: 1320px;
 
 $breack-points: (
-    "lg": 1200px,
+    "lg": 2000px,
     "md": 992px,
     "sm": 768px,
     "xs": 576px,
