--- a/students/dunaieva_alona/exam_first_module/src/css/header/_search-bar.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/header/_search-bar.scss
@@ -2,7 +2,7 @@
     background: url(../images/header-bg.jpg) center, no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
+    height: calc(100% - 83px);
     position: relative;
     font-weight: 400;
 
@@ -18,7 +18,8 @@
 
     &__scroll-link {
         position: absolute;
-        top: 80%;
+        display: block;
+        top: 165%;
         color: inherit;
         text-decoration: none;
     }
@@ -26,9 +27,12 @@
 }
 
 .search-bar-wrapper {
-    height: 100vh;
     @include flex-jsc-al(center, center);
     flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .form {
