scss_files_imported

--- a/students/savchak_marharyta/exam_1/src/css/style.scss
+++ b/students/savchak_marharyta/exam_1/src/css/style.scss
@@ -1,6 +1,9 @@
+@use 'sass:math';
 @import "./variables";
-@import "./global";
-@import "./reset";
+@import "./extend";
 @import "./mixins";
+@import "./fonts";
+@import "./reset";
+@import "./global";
 @import "./header/header";
 @import "./main/main";
