no_repeat_setted

--- a/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
@@ -1,5 +1,6 @@
 .heroblock {
     background-image: url("../../images/heroblock-bg.jpeg");
+    background-repeat: no-repeat;
     // .heroblock__title
 
     &__title {}
