--- a/students/umienchuk_oksana/project_second_monticello/src/css/_footer.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_footer.scss
@@ -1,16 +1,49 @@
 .footer {
-    overflow-x: hidden;
-    width: 100%;
-}
-
-.map {
+    position: relative;
+    // overflow-x: hidden;
     width: 100%;
 
-}
+    &__img {
+        display: block;
+    }
 
-.google-map {
-    width: 100%;
-    height: 600px;
-    /* Задайте высоту по вашим требованиям */
-    border: 0;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
+        z-index: 2;
+    }
+
+    .text-lorem {}
+
+    &__container {
+        position: absolute;
+        top: -60%;
+        right: 0;
+        left: 0;
+        width: 770px;
+        display: flex;
+        border: 1px solid red;
+        color: azure;
+        z-index: 20;
+    }
+
+    &__form {
+        color: azure;
+        width: 770px;
+        height: 450px;
+        margin-bottom: 50px;
+    }
+
+    &__socials {
+        position: absolute;
+        bottom: 0;
+        z-index: 10;
+        right: 0;
+        left: 0;
+    }
 }
