--- a/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
@@ -104,6 +104,7 @@
         font-size: 18px;
         font-weight: 400;
         text-transform: uppercase;
+        // white-space: nowrap;
     }
 
     // .news-card__author-data
