container_quality_changed

--- a/students/savchak_marharyta/exam_1/src/css/_global.scss
+++ b/students/savchak_marharyta/exam_1/src/css/_global.scss
@@ -6,7 +6,7 @@ body {
 
 .container {
     padding-bottom: $container-bottom-padding;
-    max-width: $container-max-width;
+    width: $container-max-width;
     margin: 0 auto;
 }
 
