--- a/students/savchak_marharyta/exam_1/src/css/header/_header.scss
+++ b/students/savchak_marharyta/exam_1/src/css/header/_header.scss
@@ -6,15 +6,24 @@
         text-transform: uppercase;
         color: $white;
         font-size: 24px;
+        letter-spacing: 2.4px;
+        margin: 0;
+        line-height: 24px;
+        font-weight: 700;
     }
 }
 
-.nav {}
+.nav {
+    width: 576px;
+}
 
 .menu {
     list-style-type: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    align-items: center;
 
     &__item {}
 
@@ -24,10 +33,12 @@
         color: $white;
         font-family: $btn-font;
         font-size: 14px;
+        letter-spacing: 1.4px;
     }
 }
 
 .header__container {
     display: flex;
     justify-content: space-between;
+    padding: 32px 0;
 }
