--- a/students/savchak_marharyta/exam_1/src/css/_variables.scss
+++ b/students/savchak_marharyta/exam_1/src/css/_variables.scss
@@ -17,6 +17,12 @@ $font-path: './fonts/';
 $default-font-color: $white;
 $default-font-size: 16px;
 
+$logo-font-family: 'Josefin Sans';
+$logo-font: $logo-font-family, $fallback;
+
+$description-font-family: 'Josefin Sans';
+$description-font: $description-font-family, $fallback;
+
 $section-titles-font-family: 'Aleo';
 $section-title-font: $section-titles-font-family, $fallback;
 $btn-font-family: 'Aleo';
