--- a/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
@@ -11,6 +11,7 @@
         font-size: 48px;
         margin: 0;
         padding-bottom: 8px;
+        font-family: $logo-font-family;
     }
 
     // .heroblock__text
