--- a/students/savchak_marharyta/exam_1/src/css/header/_header.scss
+++ b/students/savchak_marharyta/exam_1/src/css/header/_header.scss
@@ -10,6 +10,7 @@
         margin: 0;
         line-height: 24px;
         font-weight: 700;
+        font-family: $logo-font;
     }
 }
 
@@ -40,5 +41,5 @@
 .header__container {
     display: flex;
     justify-content: space-between;
-    padding: 32px 0;
+    padding: 34px 0;
 }
