--- a/students/dunaieva_alona/exam_first_module/src/css/header/_search-bar.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/header/_search-bar.scss
@@ -18,8 +18,10 @@
 
     &__scroll-link {
         position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, -100%);
         display: block;
-        top: 165%;
         color: inherit;
         text-decoration: none;
     }
