--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
@@ -4,7 +4,7 @@
     right: 0;
     left: 0;
     z-index: 100;
-    padding: 35px 15px;
+    padding: 20px 15px;
 
     &.bg-header {
         background-color: rgba($color-steel-blue, $alpha: 0.8);
@@ -21,6 +21,12 @@
 
 .menu-wrapper {
     height: 100%;
+    display: flex;
+    justify-content: center;
+
+    @include media(sm) {
+        justify-content: flex-end;
+    }
 }
 
 .menu {
@@ -33,9 +39,11 @@
 
     @include media(sm) {
         display: none;
-        background-color: white;
+        justify-content: flex-start;
+        margin: 15px 0;
+        background-color: rgba($color: $color-black, $alpha: .5);
         position: fixed;
-        top: 50px;
+        top: 105px;
         left: 0;
         right: 0;
         bottom: 0;
@@ -51,6 +59,11 @@
 
     &__item {
         align-self: center;
+
+        @include media(sm) {
+            padding: 15px;
+        }
+
     }
 
     &__item-link {
@@ -63,6 +76,10 @@
         &::before {
             content: url(../../images/ellipse-3.svg);
             padding-right: 5px;
+
+            @include media(md) {
+                display: none;
+            }
         }
 
         &:hover {
@@ -86,7 +103,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 6px;
-    border: $default-border;
+    border: none;
+    background-color: rgba($color: $color-white, $alpha: .5);
 
     ._open & {
         .menu-open-btn__line {
@@ -109,7 +127,7 @@
         position: relative;
         display: block;
         width: 70%;
-        background-color: green;
+        background-color: $color-purple;
         height: 4px;
         border-radius: 4px;
         transition: background-color .3s ease-in-out;
@@ -120,7 +138,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            background-color: green;
+            background-color: $color-purple;
             border-radius: inherit;
             position: absolute;
             transition: all .3s ease-in-out;
@@ -138,6 +156,18 @@
 
 .only-mobile {
     @include media-m(sm) {
+        display: none;
+    }
+}
+
+.menu-social-media {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+
+    @include media(md) {
         display: none;
     }
 }
