--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
@@ -46,7 +46,8 @@
         max-height: 240px;
         width: 100%;
         height: 100%;
-        // object-fit: cover;
+        padding: 0;
+        object-fit: cover;
         overflow: hidden;
     }
 
@@ -69,6 +70,11 @@
     &__user-wrapper {
         display: flex;
         padding-top: 30px;
+        width: 100%;
+
+        & .col-3 {
+            padding: 15px 0;
+        }
     }
 
     &__user-image-wrapper {
