--- a/students/hridina_anastasiia/exam_project_2/src/css/_variables.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/_variables.scss
@@ -17,7 +17,8 @@ $default-body-color: $white-color;
 $default-font-name: 'Montserrat';
 $fallback: Arial, Helvetica, sans-serif;
 $default-font-size: 18px;
-
+$sourcesans-font: 'Source Sans 3';
+$opensans-font: 'Open Sans';
 $main-font: $default-font-name, $fallback;
 $font-path: './fonts/';
 
