--- a/students/hridina_anastasiia/exam_project_2/src/css/style.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/style.scss
@@ -1,7 +1,19 @@
 @use 'sass:math';
+@import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss';
+@import '../../node_modules/slick-carousel/slick/slick.scss';
+@import '../../node_modules/slick-carousel/slick/slick-theme.scss';
+@import '../../node_modules/lightbox2/dist/css/lightbox.css';
 @import "./variables";
 @import "./extend";
 @import "./mixins";
 @import './fonts';
 @import './reset';
 @import "./global";
+@import './header/menu';
+@import'./main/hero_block';
+@import './main/trade_center';
+@import './main/commerce';
+@import './main/latest_news';
+@import './main/gallery';
+@import './main/googlemap';
+@import './footer/footer';
