--- a/students/hridina_anastasiia/exam_project_2/src/css/_global.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/_global.scss
@@ -2,6 +2,7 @@ body {
     font-family: $main-font;
     background-color: $default-body-color;
     font-size: $default-font-size;
+    overflow-x: hidden;
 }
 
 @include grid();
