--- a/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
@@ -2,6 +2,7 @@
 @import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss';
 @import "../../node_modules/slick-carousel/slick/slick.css";
 @import "../../node_modules/slick-carousel/slick/slick-theme.css";
+@import "../../node_modules/lightbox2/src/css/lightbox.css";
 @import "./variables";
 @import "./extend";
 @import "./mixins";
