--- a/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
@@ -1,6 +1,5 @@
 .gallery {
     padding: 180px 0 150px;
-
     // .gallery__title
 
     &__title {
@@ -24,64 +23,47 @@
             z-index: 20;
         }
     }
+
+    // .gallery__grid
+
+    &__grid {
+        // display: grid;
+        // grid-template-columns: repeat(4, 1fr);
+        // grid-column-gap: 10px;
+        // grid-row-gap: 10px;
+    }
+
+    // // .gallery__grid-item
+
+    // &__grid-item {
+    //     &:first-child {
+    //         grid-column: 1 / 3;
+    //         grid-row: 1 / 3;
+    //     }
 }
 
-.parent {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+// .gallery__link
+
+&__link {}
+
+// .gallery__img-wrap
+
+// &__img-wrap {
+//     width: 285px;
+//     height: 214px;
+//     overflow: hidden;
+// }
+
+// // .gallery__img
+
+// &__img {
+//     object-fit: cover;
+// }
+
+// .gallery__btn
+&__btn {}
 }
 
-.div1 {
-    grid-area: 1 / 1 / 3 / 3;
-}
-
-.div2 {
-    grid-area: 1 / 3 / 2 / 4;
-}
-
-.div3 {
-    grid-area: 1 / 4 / 2 / 5;
-}
-
-.div4 {
-    grid-area: 2 / 3 / 3 / 4;
-}
-
-.div5 {
-    grid-area: 2 / 4 / 3 / 5;
-}
-
-.div6 {
-    grid-area: 3 / 1 / 4 / 2;
-}
-
-.div7 {
-    grid-area: 3 / 2 / 4 / 3;
-}
-
-.div8 {
-    grid-area: 3 / 3 / 4 / 4;
-}
-
-.div9 {
-    grid-area: 3 / 4 / 4 / 5;
-}
-
-.div10 {
-    grid-area: 4 / 1 / 5 / 2;
-}
-
-.div11 {
-    grid-area: 4 / 2 / 5 / 3;
-}
-
-.div12 {
-    grid-area: 4 / 3 / 5 / 4;
-}
-
-.div13 {
-    grid-area: 4 / 4 / 5 / 5;
+.gallery-open {
+    display: none;
 }
