--- a/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
@@ -27,10 +27,10 @@
     // .gallery__grid
 
     &__grid {
-        // display: grid;
-        // grid-template-columns: repeat(4, 1fr);
-        // grid-column-gap: 10px;
-        // grid-row-gap: 10px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
     }
 
     // // .gallery__grid-item
@@ -40,28 +40,29 @@
     //         grid-column: 1 / 3;
     //         grid-row: 1 / 3;
     //     }
-}
 
-// .gallery__link
 
-&__link {}
+    // .gallery__link
 
-// .gallery__img-wrap
+    &__link {}
 
-// &__img-wrap {
-//     width: 285px;
-//     height: 214px;
-//     overflow: hidden;
-// }
+    // .gallery__img-wrap
 
-// // .gallery__img
+    // &__img-wrap {
+    //     width: 285px;
+    //     height: 214px;
+    //     overflow: hidden;
+    // }
 
-// &__img {
-//     object-fit: cover;
-// }
+    // // .gallery__img
 
-// .gallery__btn
-&__btn {}
+    // &__img {
+    //     object-fit: cover;
+    // }
+
+    // .gallery__btn
+    &__btn {}
+
 }
 
 .gallery-open {
