--- a/students/umienchuk_oksana/project_second_monticello/src/css/_hero.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_hero.scss
@@ -14,7 +14,7 @@
     &__block {
         position: relative;
         height: 100vh;
-        display: flex !important;
+        display: flex;
         justify-content: center;
         align-items: center;
 
