--- a/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
@@ -4,9 +4,9 @@
 @include font-face ('open-sans-v35-latin-regular', 400, $font-sub-first);
 @include font-face ('open-sans-v35-latin-italic', 400, $font-sub-first, italic);
 
-* {
-    outline: 2px solid red;
-}
+// * {
+//     outline: 2px solid red;
+// }
 
 body {
     margin: 0 auto;
