--- a/main/js/40/src/css/_variables.scss
+++ b/main/js/40/src/css/_variables.scss
@@ -20,7 +20,7 @@ $default-border: 1px solid $grey-light;
 $default-body-color: $white-color;
 
 // fonts
-$default-font-name: 'Roboto';
+$default-font-name: Montserrat;
 $fallback: Arial, Helvetica, sans-serif;
 $default-font-size: 18px;
 
@@ -34,10 +34,10 @@ $container-max-width: 1200px;
 $gap: 15px;
 $defaulp-count-col: 12;
 
-$default-width: 1200px;
+$default-width: 1170px;
 
 $breack-points: (
-    "lg": 1200px,
+    "lg": 1170px,
     "md": 992px,
     "sm": 768px,
     "xs": 576px,
