button_work_started

--- a/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
@@ -22,18 +22,30 @@
         margin: 0;
         padding-bottom: 30px;
         line-height: 28px;
+        white-space: nowrap;
     }
 
-    &__container {}
+    &__container {
+        padding: 100px 150px 100px 0;
+        box-sizing: border-box;
+    }
 
     &__button-wrapper {
         padding: 20px 32px;
         background-color: $blue;
         width: 150px;
         font-family: $btn-font;
+        z-index: -1;
+        position: relative;
     }
 
-    // .why-choose-us__button
+    &__button-wrapper::before {
+        content: "";
+        background-color: $darker-blue;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
 
     &__button {
         color: inherit;
@@ -44,6 +56,7 @@
     }
 
     &__row {
+
         display: flex;
         justify-content: space-between;
     }
