--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
@@ -127,7 +127,7 @@
         position: relative;
         display: block;
         width: 70%;
-        background-color: $color-purple;
+        background-color: $color-steel-blue;
         height: 4px;
         border-radius: 4px;
         transition: background-color .3s ease-in-out;
@@ -138,7 +138,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            background-color: $color-purple;
+            background-color: $color-steel-blue;
             border-radius: inherit;
             position: absolute;
             transition: all .3s ease-in-out;
