--- a/students/tiselko_iryna/exam_js-module/src/css/_global.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/_global.scss
@@ -9,7 +9,7 @@ body {
     overflow-x: hidden
 }
 
-h1 {
+body h1 {
     font-family: $secondary-font;
     font-size: $h1-font-size;
     font-weight: $h1-font-weight;
@@ -19,7 +19,7 @@ h1 {
     // text-transform: uppercase;
 }
 
-h2 {
+body h2 {
     font-family: $secondary-font;
     font-size: $h2-font-size;
     font-weight: $h2-font-weight;
