--- a/students/tiselko_iryna/exam_js-module/src/css/header/_header.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/header/_header.scss
@@ -6,7 +6,8 @@
     // .header__container
 
     &__container {
-        margin-top: 47px;
+        background: linear-gradient(45deg, #55b7ff 0%, #7e5aff 100%);
+        box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
 
         @include media () {
             margin-top: 15px;
