added changes to js file

--- a/students/hridina_anastasiia/exam_project_2/src/css/_variables.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/_variables.scss
@@ -2,8 +2,8 @@
 $white-color: #fff;
 $black-color: #000;
 $pickled-bluewood: #2C4058;
-$malibu-color: #55B7FF;
-$heliotrope-color: #7E5AFF;
+$malibu-color: #55b7ff;
+$heliotrope-color: #7e5aff;
 $riverbed-color: #4B5562;
 
 
