--- a/students/hridina_anastasiia/exam_project_2/src/css/main/_hero_block.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/main/_hero_block.scss
@@ -1,11 +1,3 @@
-.header {
-    padding: 35px 15px;
-
-    & .bg-header {
-        background-color: blue;
-    }
-}
-
 .hero {
     height: 100vh;
 }
@@ -17,78 +9,87 @@
 .hero-slider {
     height: 100%;
 
+    .slick-list {
+        height: 100% !important;
+    }
+
     .slick-dots {
         bottom: unset;
         width: auto;
         top: 50%;
         transform: translateY(-50%) rotate(90deg);
-        right: 25px;
+        right: 0;
 
-        li {
+        @include media(lg) {
+            right: -50px;
+        }
+
+        @include media(xs) {
+            visibility: hidden;
+        }
+
+        li button::before {
+            content: '';
+            background-color: $white-color;
             border: 1px solid $white-color;
             border-radius: 50%;
-            margin-right: 25px;
             transition: background-color .3s ease-in-out;
             width: 8px;
             height: 8px;
-
-            & button::before {
-                content: '';
-            }
 
             &:hover {
                 background-color: $white-color;
             }
         }
 
-        &__item {
-            position: relative;
-            height: 100vh;
-            display: flex !important;
-            justify-content: center;
-            align-items: center;
+    }
 
+    &__item {
+        position: relative;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:nth-child(n+2) {
+            display: none;
+        }
+
+        .slick-initialized & {
             &:nth-child(n+2) {
-                display: none;
-            }
-
-            .slick-initialized & {
-                &:nth-child(n+2) {
-                    display: block;
-                }
-            }
-
-            &:first-child::after {
-                content: '';
                 display: block;
-                position: absolute;
-                top: 0;
-                right: 0;
-                left: 0;
-                bottom: 0;
-                background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
-                z-index: 2;
             }
         }
 
-
-        &__img {
-            height: 100%;
+        &:first-child::after {
+            content: '';
+            display: block;
             position: absolute;
             top: 0;
-            left: 0;
             right: 0;
+            left: 0;
             bottom: 0;
-            width: 100%;
-            object-fit: cover;
-            object-position: center;
-            z-index: 1;
+            background-image: linear-gradient(60deg, rgba(85, 183, 255) 15%, rgba(126, 90, 255) 65%);
+            z-index: 2;
         }
+    }
 
-        &__container {
-            position: relative;
-            z-index: 10;
-        }
+    &__img {
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+        z-index: 10;
+    }
+
+    &__container {
+        position: relative;
+        z-index: 10;
     }
 
     .title {
@@ -98,7 +99,7 @@
         &__heading {
             @include new-font($default-font-name, 80px, 700, normal, normal, 8px);
             color: $white-color;
-            text-align: center
+            text-align: center;
         }
 
         // .title__text
