--- a/students/hridina_anastasiia/exam_project_2/src/css/main/_hero_block.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/main/_hero_block.scss
@@ -1,3 +1,11 @@
+.header {
+    padding: 35px 15px;
+
+    &.bg-header {
+        background-color: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
+    }
+}
+
 .hero {
     height: 100vh;
 }
